<resources>
    <string name="app_name">LoginPasswordUI</string>
    <string name="login_by_password">密码登陆</string>
    <string name="login_by_vCode">验证码登陆</string>
    <string name="phone_number">手机号码:</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="login_password">登陆密码:</string>
    <string name="input_password">请输入登陆密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登陆</string>
    <string name="input_new_password">输入新密码：</string>
    <string name="input_new_password_hint">请输入新密码</string>
    <string name="confirm_new_password">确认新密码：</string>
    <string name="input_new_password_again">请再次输入新密码</string>
    <string name="verify_code">验证码：</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="done">确定</string>
</resources>