<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rg_login"
        android:layout_height="@dimen/item_layout_height"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text = "@string/login_by_password"
            android:textSize="@dimen/common_font_size"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_vCode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text = "@string/login_by_vCode"
            android:textSize="@dimen/common_font_size"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/phone_number"
            android:textSize="@dimen/common_font_size"/>

        <EditText
            android:id="@+id/et_pNumber"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/input_phone_number"
            android:background="@drawable/edittext_background"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="@dimen/common_font_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_passOrSMS"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/login_password"
            android:textSize="@dimen/common_font_size"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="@dimen/item_layout_height">

            <EditText
                android:id="@+id/et_passOrSMS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_password"
                android:background="@drawable/edittext_background"
                android:textSize="@dimen/common_font_size"
                android:inputType="text"/>

            <Button
                android:id="@+id/btn_forgetPass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:text="@string/forget_password"/>

        </RelativeLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_rememberPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:text="@string/remember_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:text="@string/login"/>

    <Button
        android:id="@+id/btn_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="测试"/>

</LinearLayout>